--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li>
-            <a >All Events</a>
+            <a [routerLink]="['/events']" >All Events</a>
           </li>
           <li><a href="">Create Event</a></li>
           <li class="dropdown">
@@ -16,7 +16,7 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li >
+              <li>
                 <a href="">Angular Connect</a>
               </li>
             </ul>
