--- a/src/app/user/profile.component.html
+++ b/src/app/user/profile.component.html
@@ -2,13 +2,15 @@
         <h1>Edit Your Profile </h1>
         <hr>
         <div class="col-md-4">
-          <form  (ngSubmit)="saveProfile(profileForm.value)" [formGroup]="profileForm" autocomplete="off" novalidate>
-            <div class="form-group">
+          <form [formGroup]="profileForm"  (ngSubmit)="saveProfile(profileForm.value)" autocomplete="off" novalidate>
+            <div class="form-group" [ngClass]="{'error' : !validateFirstName()}">
               <label for="firstName">First Name:</label>
+              <em *ngIf="!validateFirstName()">Required</em>
               <input formControlName="firstName" id="firstName" type="text" class="form-control" placeholder="First Name..." />
             </div>
-            <div class="form-group">
+            <div class="form-group" [ngClass]="{'error' : !validateLastName()}">
               <label for="lastName">Last Name:</label>
+              <em *ngIf="!validateLastName()">Required</em>
               <input formControlName="lastName" id="lastName" type="text" class="form-control" placeholder="Last Name..." />
             </div>
       
