--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -41,6 +41,6 @@
     </div>
  
 
-    <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+    <session-list [filterBy]="filterBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
     <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
   </div>
