--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -5,7 +5,7 @@
     <div class="form-group" [ngClass]="{'error': newEventForm.controls.name?.invalid && newEventForm.controls.name?.touched}">
       <label for="eventName">Event Name:</label>
       <em *ngIf="newEventForm.controls.name?.invalid && (newEventForm.controls.name?.touched)">Required</em>
-      <input (ngModel)]="event.name" name="name" required id="name" type="text" class="form-control" placeholder="Name of your event..." />
+      <input (ngModel)="event.name" name="name" required id="name" type="text" class="form-control" placeholder="Name of your event..." />
     </div>
     <div class="form-group" [ngClass]="{'error': newEventForm.controls.date?.invalid && newEventForm.controls.date?.touched}">
       <label for="eventDate">Event Date:</label>
