creating a modal component AGAIN AGAIN

--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -44,8 +44,7 @@
 
   <simple-modal title="Matching Sessions">
     <div class="list-group">
-      <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['events', session.eventId]">
-        {{session.name}}
-      </a>
+      <a class="list-group-item" *ngFor="let session of foundSessions" 
+      [routerLink]="['/events', session.event.Id]">{{session.name}}</a>
     </div>
   </simple-modal>
