--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -45,6 +45,6 @@
   <simple-modal title="Matching Sessions">
     <div class="list-group">
       <a class="list-group-item" *ngFor="let session of foundSessions" 
-      [routerLink]="['/events', session.event.Id]">{{session.name}}</a>
+      [routerLink]="['/events', session.eventId]">{{session.name}}</a>
     </div>
   </simple-modal>
