--- a/src/app/events/event-details/session-list.component.html
+++ b/src/app/events/event-details/session-list.component.html
@@ -1,8 +1,7 @@
 <div class="row" *ngFor="let session of visibleSessions">
   <div class="col-md-1">
-    <upvote (vote)="toggleVote(session)" [count]="session.voters.length" [voted]="userHasVoted(session)">
-
-    </upvote>
+    <upvote (vote)="toggleVote(session)" [count]="session.voters.length"
+    [voted]="userHasVoted(session)"></upvote>
   </div>
         <div class="col-md-10">
           <collapsible-well [title]="session.name">
