--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -24,7 +24,7 @@
     </div>
     
 
-    <div ngModelGroup="location">
+    <div ngModelGroup="location" validateLocation>
         <div class="form-group">
         <label for="address">Event Location:</label>
         <input (ngModel)="event.location.address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..." />
